updated social useranames

--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ owner:
   bio: "A web developer who lurks into new technologies and exciting stuffs"
   email: freedom_war550@live.com.ph
   disqus-shortname: 
-  twitter: #alleoindong
-  facebook: #aindong
+  twitter: alleoindong
+  facebook: aindong
   google:
     plus: #username
     analytics: 
@@ -40,8 +40,8 @@ owner:
     ad-client: 
     ad-slot: 
   bing-verify: 
-  github: #aindong
-  stackoverflow: #http://stackoverflow.com/users/3792278/alleo-indong
+  github: aindong
+  stackoverflow: http://stackoverflow.com/users/3792278/alleo-indong
   linkedin: #username
   instagram: #username
   lastfm: #username
