--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,20 +1,11 @@
 # Authors
 
-billy_rick:
-  name: Billy Rick
-  web: http://thewhip.com
-  email: billy@rick.com
-  bio: "What do you want, jewels? I am a very extravagant man."
-  avatar: bio-photo-2.jpg
-  twitter: extravagantman
+alleo_indong:
+  name: Alleo Indong
+  web: http://aindong.github.io
+  email: freedom_war550@live.com.ph
+  bio: "A web developer from somewhere"
+  avatar: https://avatars1.githubusercontent.com/u/1896053
+  twitter: alleoindong
   google:
     plus: BillyRick
-
-cornelius_fiddlebone:
-  name: Cornelius Fiddlebone
-  email: cornelius@thewhip.com
-  bio: "I ordered what?"
-  avatar: bio-photo.jpg
-  twitter: rhymeswithsackit
-  google:
-    plus: CorneliusFiddlebone
