updated stackoverflow link

--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ owner:
     ad-slot: 
   bing-verify: 
   github: aindong
-  stackoverflow: http://stackoverflow.com/users/3792278/alleo-indong
+  stackoverflow: 3792278/alleo-indong
   linkedin: #username
   instagram: #username
   lastfm: #username
